@@ -836,7 +836,7 @@ HB_FUNC( IGCOLORTOOLTIP )
 /* void igColumns(int count,const char* id,bool border) */
 HB_FUNC( IGCOLUMNS )
 {
-   int count = hb_parni( 1 );
+   int count = hb_parnidef( 1, 1 );
    const char* id = hb_parcx( 2 );
    bool border = hb_parldef( 3, 1 );
    igColumns(count,id,border);
@@ -850,7 +850,7 @@ HB_FUNC( IGCOMBOSTRARR )
    int * current_item = &_current_item;
    const char* const items[] = { 0 };
    int items_count = hb_parni( 4 );
-   int popup_max_height_in_items = hb_parni( 5 );
+   int popup_max_height_in_items = hb_parnidef( 5, -1 );
    bool ret = igComboStr_arr(label,current_item,items,items_count,popup_max_height_in_items);
    hb_itemPutNI( hb_paramError( 2 ), _current_item );
    hb_retl( ret );
@@ -863,7 +863,7 @@ HB_FUNC( IGCOMBOSTR )
    int /* @ */ _current_item = hb_parni( 2 );
    int * current_item = &_current_item;
    const char* items_separated_by_zeros = hb_parcx( 3 );
-   int popup_max_height_in_items = hb_parni( 4 );
+   int popup_max_height_in_items = hb_parnidef( 4, -1 );
    bool ret = igComboStr(label,current_item,items_separated_by_zeros,popup_max_height_in_items);
    hb_itemPutNI( hb_paramError( 2 ), _current_item );
    hb_retl( ret );
@@ -877,7 +877,7 @@ HB_FUNC( IGCOMBOFNBOOLPTR )
    int * current_item = &_current_item;
    void* data = ( void* ) hb_parptr( 4 );
    int items_count = hb_parni( 5 );
-   int popup_max_height_in_items = hb_parni( 6 );
+   int popup_max_height_in_items = hb_parnidef( 6, -1 );
    bool ret = igComboFnBoolPtr(label,current_item,&hb_ig_items_getter,data,items_count,popup_max_height_in_items);
    hb_itemPutNI( hb_paramError( 2 ), _current_item );
    hb_retl( ret );
@@ -1641,7 +1641,7 @@ HB_FUNC( IGGETCOLUMNNORMFROMOFFSET )
 /* float igGetColumnOffset(int column_index) */
 HB_FUNC( IGGETCOLUMNOFFSET )
 {
-   int column_index = hb_parni( 1 );
+   int column_index = hb_parnidef( 1, -1 );
    float ret = igGetColumnOffset(column_index);
    hb_retnd( ( double ) ret );
 }
@@ -1658,7 +1658,7 @@ HB_FUNC( IGGETCOLUMNOFFSETFROMNORM )
 /* float igGetColumnWidth(int column_index) */
 HB_FUNC( IGGETCOLUMNWIDTH )
 {
-   int column_index = hb_parni( 1 );
+   int column_index = hb_parnidef( 1, -1 );
    float ret = igGetColumnWidth(column_index);
    hb_retnd( ( double ) ret );
 }
@@ -3207,7 +3207,7 @@ HB_FUNC( IGIMAGEBUTTON )
    const ImVec2 uv0 = ImVec2{ _paf( puv0, 1 ), _paf( puv0, 2 ) };
    PHB_ITEM puv1 = hb_param( 4, HB_IT_ARRAY );
    const ImVec2 uv1 = ImVec2{ _paf( puv1, 1 ), _paf( puv1, 2 ) };
-   int frame_padding = hb_parni( 5 );
+   int frame_padding = hb_parnidef( 5, -1 );
    PHB_ITEM pbg_col = hb_param( 6, HB_IT_ARRAY );
    const ImVec4 bg_col = ImVec4{ _paf( pbg_col, 1 ), _paf( pbg_col, 2 ), _paf( pbg_col, 3 ), _paf( pbg_col, 4 ) };
    PHB_ITEM ptint_col = hb_param( 7, HB_IT_ARRAY );
@@ -3339,8 +3339,8 @@ HB_FUNC( IGINPUTINT )
    const char* label = hb_parcx( 1 );
    int /* @ */ _v = hb_parni( 2 );
    int * v = &_v;
-   int step = hb_parni( 3 );
-   int step_fast = hb_parni( 4 );
+   int step = hb_parnidef( 3, 1 );
+   int step_fast = hb_parnidef( 4, 100 );
    ImGuiInputTextFlags flags = ( ImGuiInputTextFlags ) hb_parni( 5 );
    bool ret = igInputInt(label,v,step,step_fast,flags);
    hb_itemPutNI( hb_paramError( 2 ), _v );
@@ -4092,7 +4092,7 @@ HB_FUNC( IGLISTBOXSTRARR )
    int * current_item = &_current_item;
    const char* const items[] = { 0 };
    int items_count = hb_parni( 4 );
-   int height_in_items = hb_parni( 5 );
+   int height_in_items = hb_parnidef( 5, -1 );
    bool ret = igListBoxStr_arr(label,current_item,items,items_count,height_in_items);
    hb_itemPutNI( hb_paramError( 2 ), _current_item );
    hb_retl( ret );
@@ -4106,7 +4106,7 @@ HB_FUNC( IGLISTBOXFNBOOLPTR )
    int * current_item = &_current_item;
    void* data = ( void* ) hb_parptr( 4 );
    int items_count = hb_parni( 5 );
-   int height_in_items = hb_parni( 6 );
+   int height_in_items = hb_parnidef( 6, -1 );
    bool ret = igListBoxFnBoolPtr(label,current_item,&hb_ig_items_getter,data,items_count,height_in_items);
    hb_itemPutNI( hb_paramError( 2 ), _current_item );
    hb_retl( ret );
@@ -4133,7 +4133,7 @@ HB_FUNC( IGLISTBOXHEADERINT )
 {
    const char* label = hb_parcx( 1 );
    int items_count = hb_parni( 2 );
-   int height_in_items = hb_parni( 3 );
+   int height_in_items = hb_parnidef( 3, -1 );
    bool ret = igListBoxHeaderInt(label,items_count,height_in_items);
    hb_retl( ret );
 }
@@ -4192,21 +4192,21 @@ HB_FUNC( IGLOGTEXT )
 /* void igLogToBuffer(int auto_open_depth) */
 HB_FUNC( IGLOGTOBUFFER )
 {
-   int auto_open_depth = hb_parni( 1 );
+   int auto_open_depth = hb_parnidef( 1, -1 );
    igLogToBuffer(auto_open_depth);
 }
 
 /* void igLogToClipboard(int auto_open_depth) */
 HB_FUNC( IGLOGTOCLIPBOARD )
 {
-   int auto_open_depth = hb_parni( 1 );
+   int auto_open_depth = hb_parnidef( 1, -1 );
    igLogToClipboard(auto_open_depth);
 }
 
 /* void igLogToFile(int auto_open_depth,const char* filename) */
 HB_FUNC( IGLOGTOFILE )
 {
-   int auto_open_depth = hb_parni( 1 );
+   int auto_open_depth = hb_parnidef( 1, -1 );
    const char* filename = hb_parcx( 2 );
    igLogToFile(auto_open_depth,filename);
 }
@@ -4214,7 +4214,7 @@ HB_FUNC( IGLOGTOFILE )
 /* void igLogToTTY(int auto_open_depth) */
 HB_FUNC( IGLOGTOTTY )
 {
-   int auto_open_depth = hb_parni( 1 );
+   int auto_open_depth = hb_parnidef( 1, -1 );
    igLogToTTY(auto_open_depth);
 }
 
@@ -4388,7 +4388,7 @@ HB_FUNC( IGPLOTHISTOGRAMFLOATPTR )
    float scale_max = ( float ) hb_parnd( 7 );
    PHB_ITEM pgraph_size = hb_param( 8, HB_IT_ARRAY );
    ImVec2 graph_size = ImVec2{ _paf( pgraph_size, 1 ), _paf( pgraph_size, 2 ) };
-   int stride = hb_parni( 9 );
+   int stride = hb_parnidef( 9, sizeof(float) );
    igPlotHistogramFloatPtr(label,values,values_count,values_offset,overlay_text,scale_min,scale_max,graph_size,stride);
 }
 
@@ -4419,7 +4419,7 @@ HB_FUNC( IGPLOTLINESFLOATPTR )
    float scale_max = ( float ) hb_parnd( 7 );
    PHB_ITEM pgraph_size = hb_param( 8, HB_IT_ARRAY );
    ImVec2 graph_size = ImVec2{ _paf( pgraph_size, 1 ), _paf( pgraph_size, 2 ) };
-   int stride = hb_parni( 9 );
+   int stride = hb_parnidef( 9, sizeof(float) );
    igPlotLinesFloatPtr(label,values,values_count,values_offset,overlay_text,scale_min,scale_max,graph_size,stride);
 }
 
@@ -5540,6 +5540,7 @@ HB_FUNC( IGSHADEVERTSLINEARUV )
    bool clamp = hb_parl( 8 );
    igShadeVertsLinearUV(draw_list,vert_start_idx,vert_end_idx,a,b,uv_a,uv_b,clamp);
 }
+
 #ifndef IMGUI_NO_DEMO
 /* void igShowAboutWindow(bool* p_open) */
 HB_FUNC( IGSHOWABOUTWINDOW )
@@ -5596,6 +5597,7 @@ HB_FUNC( IGSHOWUSERGUIDE )
    igShowUserGuide();
 }
 #endif
+
 /* void igShrinkWidths(ImGuiShrinkWidthItem* items,int count,float width_excess) */
 HB_FUNC( IGSHRINKWIDTHS )
 {
@@ -6105,7 +6107,7 @@ HB_FUNC( IGTABLEGETCOLUMNCOUNT )
 /* ImGuiTableColumnFlags igTableGetColumnFlags(int column_n) */
 HB_FUNC( IGTABLEGETCOLUMNFLAGS )
 {
-   int column_n = hb_parni( 1 );
+   int column_n = hb_parnidef( 1, -1 );
    ImGuiTableColumnFlags ret = igTableGetColumnFlags(column_n);
    hb_retni( ( int ) ret );
 }
@@ -6120,7 +6122,7 @@ HB_FUNC( IGTABLEGETCOLUMNINDEX )
 /* const char* igTableGetColumnNameInt(int column_n) */
 HB_FUNC( IGTABLEGETCOLUMNNAMEINT )
 {
-   int column_n = hb_parni( 1 );
+   int column_n = hb_parnidef( 1, -1 );
    const char* ret = igTableGetColumnNameInt(column_n);
    hb_retc( ret );
 }
@@ -6243,7 +6245,7 @@ HB_FUNC( IGTABLENEXTROW )
 /* void igTableOpenContextMenu(int column_n) */
 HB_FUNC( IGTABLEOPENCONTEXTMENU )
 {
-   int column_n = hb_parni( 1 );
+   int column_n = hb_parnidef( 1, -1 );
    igTableOpenContextMenu(column_n);
 }
 
@@ -6285,7 +6287,7 @@ HB_FUNC( IGTABLESETBGCOLOR )
 {
    ImGuiTableBgTarget target = ( ImGuiTableBgTarget ) hb_parni( 1 );
    ImU32 color = ( HB_U32 ) hb_parnl( 2 );
-   int column_n = hb_parni( 3 );
+   int column_n = hb_parnidef( 3, -1 );
    igTableSetBgColor(target,color,column_n);
 }
 
