@@ -3,6 +3,11 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2025-02-12 14:07 UTC+0100 Aleksander Czajczynski (hb fki.pl)
+  * cimgui/hbimgui.cpp
+  * cimgui-docking/hbimgui.cpp
+    * respect default integer parameters for functions (values other than 0)
+
 2025-02-09 17:06 UTC+0100 Aleksander Czajczynski (hb fki.pl)
   * sokol/sokol_app.h
     ! fixhack io.DeltaTime == 0.00 assertion spotted on Edge browser,
